:wrench: informacion del museo

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,29 @@
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 </head>
 <body>
+<!--
+<div class="pestaña">
+ <span>Información del Museo</span>	
+</div>
+-->
+<div id="museo">
+	<span class="effc">&#xe209;</span>
+	<h1>Museo Efímero del Olvido</h1>
+	<p>
+		El museo efímero del olvido, como proyecto curatorial del 15 Salón Regional de Artistas Zona Centro, busca problematizar la noción de pasado traumático para la cual el olvido es un problema. En esta propuesta expositiva el olvido es una potencia del tiempo en donde la historia en dond ela historia peude abrirse, deshilvanarse para configurar nuevos relatos. Así, el valor político del olvido, tan actual, es más profundo que la sola contraposición entre recuerdo y olvido.
+	</p>
+	<p>
+		El museo efímero del olvido, es en su mejor configuración, un territorio heterogenéo. Ese territorio está construido, por un lado, de <em>Promesas de desarrollo, Residuos de futuro, Mitologías de origen.</em> Allí, un número de proyectos insisten en marcar una dicotomía entre el fracaso de la modernidad a través de la ciudad y una nueva utopía representada en las dinámicas del campo. La ruina parece ser la clave desde donde leer el tiempo; como vestigio de lo que fue y supervivencia de un resto, la ruina atestigua la grandeza y la barbarie sobre la que construimos el presente.		
+	</p>
+	<p>
+		Por otro lado, el pasado reescrito, alterado, ficcionalizado dibuja los lindes de nuestra travesía; así, a través de categorías como <em>Historia como ficción, Testimonio, Traicions de la memoria, Reescritura del pasado e Instante,</em>  un grupo de proyectos tensionan y cuestionan nuestra relación con el pasado, el recuerdo y la memoria. 
+	</p>
+	<div class="contacto">
+		<a href="mailto:contacto@efimero.org">contacto@efimero.org</a> <br>
+		<a href="http://efimero.org/">www.efimero.org</a>
+		<h2>regionales</h2>
+	</div>	
+</div>
 <section>
 	<article class="a">
 		<span class="cerrar">&#xe209;</span>
