informacion acerca del museo :satellite:

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 -->
 <div id="museo">
 	<span class="effc">&#xe209;</span>
-	<h1>Museo Efímero del Olvido</h1>
+	<h1>museo efímero del olvido</h1>
 	<p>
 		El museo efímero del olvido, como proyecto curatorial del 15 Salón Regional de Artistas Zona Centro, busca problematizar la noción de pasado traumático para la cual el olvido es un problema. En esta propuesta expositiva el olvido es una potencia del tiempo en donde la historia en dond ela historia peude abrirse, deshilvanarse para configurar nuevos relatos. Así, el valor político del olvido, tan actual, es más profundo que la sola contraposición entre recuerdo y olvido.
 	</p>
